modifications to today's poem

--- a/content/Literature/poem12082019.md
+++ b/content/Literature/poem12082019.md
@@ -39,7 +39,9 @@ nee gundello chaerindi lae...
 naa tanuvae, nannu patti,
 
 nee needallo nadipindilae...
-
+<br>
+<br>
+<br>
 **Part - 2 :**
 
 Yemo yemo, mee maayemo,
@@ -56,7 +58,7 @@ roju kshanamaina nee dhyasa laekunda, laedulae...
 <br>
 <br>
 <br>
-naa paeru vintunna palakundunna,
+naa paeru vintunna palakakundunna,
 
 nee paerae swasallo nindipoyunna,
 
@@ -64,9 +66,9 @@ nae yetu nadusthunna neevaipe saagelae...
 <br>
 <br>
 <br>
-nuvvelae nannu maarchindee,
+nuvvelae nannu maarchinadee,
 
-nee navvultho yaemaarchindi...
+nee navvultho yaemaarchinadi...
 
 neekaina telise veelunda,
 
@@ -90,7 +92,7 @@ nuvvu chesthunnavae ee vinthalae...
 <br>
 <br>
 <br>
-(nae) unna chotu nae laenanipinchey,
+(nae) unna chotaina laenanipinchey,
 
 yeppudu nee chuttu unnananipinchey,
 
@@ -104,7 +106,7 @@ ee bhaavalakardham yemolae...
 
 yemaina, deennaemanna,
 
-naavanni ika neevaelae..!
+naa jeevitham ika neetholae..!
 <br>
 <br>
 <br>
