--- a/content/Literature/poem12082019.md
+++ b/content/Literature/poem12082019.md
@@ -10,7 +10,7 @@ publishdate: 2019-08-12T09:36:50+05:30
 
 **Part - 1 :**
 
-Yemo yemo, mee maayemo,
+Yemo yemo, ee maayemo,
 
 yemo ee haayemo..?
 <br>
@@ -44,7 +44,7 @@ nee needallo nadipindilae...
 <br>
 **Part - 2 :**
 
-Yemo yemo, mee maayemo,
+Yemo yemo, ee maayemo,
 
 yemo ee haayemo..?
 <br>
@@ -78,7 +78,7 @@ nuvve maaya chesavani..?
 <br>
 **Part - 3 :**
 
-Yemo yemo, mee maayemo,
+Yemo yemo, ee maayemo,
 
 yemo ee haayemo..?
 <br>
